2012-06-22  David Kilzer  <ddkilzer@apple.com>

        BUILD FIX: FormController.cpp fails to build on 32-bit architectures

        This fixes the following build failure introduced in r121004 for
        Bug 89628:

            FormController.cpp:62:36: error: implicit conversion loses integer precision: 'uint64_t' (aka 'unsigned long long') to 'size_t' (aka 'unsigned long') [-Werror,-Wshorten-64-to-32]
                state.m_values.reserveCapacity(valueSize);
                ~~~~~                          ^~~~~~~~~

        * html/FormController.cpp:
        (WebCore::FormControlState::deserialize): Change type of
        valueSize from uint64_t to size_t.

2012-06-22  Abhishek Arya  <inferno@chromium.org>

        Crash in DragController::concludeEditDrag.
        https://bugs.webkit.org/show_bug.cgi?id=89762

        Reviewed by Ryosuke Niwa.

        RefPtr the innerFrame since it can get destroyed due to mutation
        event fired in DragController::dispatchTextInputEventFor().

        Test: editing/pasteboard/drop-text-events-sideeffect-crash.html

        * page/DragController.cpp:
        (WebCore::DragController::concludeEditDrag):

2012-06-22  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: timeline event details popup misses CPU time
        https://bugs.webkit.org/show_bug.cgi?id=89765

        Reviewed by Pavel Feldman.

        * inspector/front-end/TimelinePresentationModel.js:
        (WebInspector.TimelinePresentationModel.Record.prototype.generatePopupContent):

2012-06-22  Peter Beverloo  <peter@chromium.org>

        [Chromium] Disable c++0x compatibility warnings in JavaScriptCore.gyp when building for Android
        https://bugs.webkit.org/show_bug.cgi?id=88853

        Reviewed by Steve Block.

        The Android exclusions were necessary to fix a gyp generation error, as
        the gcc_version variable wasn't being defined for Android. Remove these